--- a/frontend/src/Feed.css
+++ b/frontend/src/Feed.css
@@ -1,5 +1,5 @@
 .feed{
-    flex: 0.45;
+    flex: 0.5;
     border-right: 1px solid var(--twitter-background);
     min-width: fit-content;
     overflow-y: scroll;
@@ -18,6 +18,7 @@
     background-color: white;
     z-index: 1;
     border: 1px solid var(--twitter-background);
+    border-left: 0;
     padding: 15px 20px;
 }
 
@@ -27,7 +28,7 @@
 }
 @media screen and (max-width:900px) {
     .feed{
-        flex:0.8;
+        flex:1;
         min-width: 270px;
     }
 }
