--- a/frontend/src/Sidebar.css
+++ b/frontend/src/Sidebar.css
@@ -2,7 +2,6 @@
     border-right: 1px solid var(--twitter-background);
     flex: 0.2;
     min-width: 250px;
-    margin-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -11,6 +10,7 @@
     color: var(--twitter-color);
     font-size: 30px !important;
     margin-left: 10px;
+    margin-top: 10px;
     /* margin-bottom: 20px; */
 }
 .sidebar__twitterIcon:hover{
@@ -34,6 +34,8 @@
 @media screen and (max-width:1100px) {
     .sidebar{
         min-width: 50px;
+        max-width: 60px;
+        padding: 0;
     }
     .sidebar__tweet{
         display: none !important;
