fixing scroll issue

--- a/frontend/src/Feed.css
+++ b/frontend/src/Feed.css
@@ -3,6 +3,7 @@
     border-right: 1px solid var(--twitter-background);
     min-width: fit-content;
     overflow-y: scroll;
+    overflow-x: hidden;
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
