--- a/frontend/src/Feed.css
+++ b/frontend/src/Feed.css
@@ -1,5 +1,5 @@
 .feed{
-    flex: 0.5;
+    flex: 0.4;
     border-right: 1px solid var(--twitter-background);
     min-width: fit-content;
     overflow-y: scroll;
@@ -18,8 +18,7 @@
     top:0;
     background-color: white;
     z-index: 1;
-    border: 1px solid var(--twitter-background);
-    border-left: 0;
+    border-bottom: 1px solid var(--twitter-background);
     padding: 15px 20px;
 }
 
