--- a/frontend/src/Widgets.css
+++ b/frontend/src/Widgets.css
@@ -1,5 +1,5 @@
 .widgets{
-    flex:0.30;
+    flex:0.35;
 }
 .widgets__input{
     display: flex;
@@ -30,11 +30,11 @@
     font-size: 18px;
     font-weight: 700;
 }
-@media screen and (max-width:1100px) {
+/* @media screen and (max-width:1100px) {
     .widgets{
-        flex:0.4
+        flex:0.35
     }
-}
+} */
 @media screen and (max-width:900px) {
     .widgets{
         display: none;
